Completing Patient Dashboard and Doctor Dashboard